Fixing menu text alignment

--- a/app/assets/stylesheets/layout/positioning.css.scss
+++ b/app/assets/stylesheets/layout/positioning.css.scss
@@ -18,6 +18,10 @@ body {
 .site-actions {
   padding-top: 1em;
   text-align: right;
+
+  .dropdown-menu {
+    text-align: left;
+  }
 }
 
 .page-footer {
